@@ -493,7 +493,7 @@ int libvmdk_extent_descriptor_get_range(
 
 /* Retrieves the size of the UTF-8 encoded filename
  * The returned size includes the end of string character
- * Returns 1 if successful or -1 on error
+ * Returns 1 if successful, 0 if not available or -1 on error
  */
 LIBVMDK_EXTERN \
 int libvmdk_extent_descriptor_get_utf8_filename_size(
@@ -503,7 +503,7 @@ int libvmdk_extent_descriptor_get_utf8_filename_size(
 
 /* Retrieves the UTF-8 encoded filename
  * The size should include the end of string character
- * Returns 1 if successful or -1 on error
+ * Returns 1 if successful, 0 if not available or -1 on error
  */
 LIBVMDK_EXTERN \
 int libvmdk_extent_descriptor_get_utf8_filename(
@@ -514,7 +514,7 @@ int libvmdk_extent_descriptor_get_utf8_filename(
 
 /* Retrieves the size of the UTF-16 encoded filename
  * The returned size includes the end of string character
- * Returns 1 if successful or -1 on error
+ * Returns 1 if successful, 0 if not available or -1 on error
  */
 LIBVMDK_EXTERN \
 int libvmdk_extent_descriptor_get_utf16_filename_size(
@@ -524,7 +524,7 @@ int libvmdk_extent_descriptor_get_utf16_filename_size(
 
 /* Retrieves the UTF-16 encoded filename
  * The size should include the end of string character
- * Returns 1 if successful or -1 on error
+ * Returns 1 if successful, 0 if not available or -1 on error
  */
 LIBVMDK_EXTERN \
 int libvmdk_extent_descriptor_get_utf16_filename(
